--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,3 +55,24 @@ a {
     }
   }
 }
+
+
+//  FAQ
+
+.container {
+  padding: 10px 30px;
+  // max-width: 700px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: justify;
+
+  p {
+    max-width: 1200px;
+    line-height: 28px;
+    letter-spacing: .8px;
+    font-size: 18px;
+    font-weight: 400;
+
+  }
+}
